[package]
name = "notjava"
version = "0.1.0"
authors = ["Gerard Klijs <g.klijs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2.5"